fix the clipping at certain screen widths

--- a/assets/css/_side_nav.scss
+++ b/assets/css/_side_nav.scss
@@ -7,7 +7,7 @@
   position: fixed;
 
   // top: 0px;
-  width: 300px;
+  width: 260px;
   height: 100%;
   color: #e1ffff;
 
